--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>LuFashion - Gerenciador de Notas</title>
+    <title>LuLoja - Gerenciador de Notas</title>
     <meta name="description" content="Aplicativo para gerenciamento de notas de loja de roupas femininas" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
